--- a/applications/areg-portal/frontend/package.json
+++ b/applications/areg-portal/frontend/package.json
@@ -20,12 +20,15 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@mui/styles": "^5.9.3",
     "@mui/x-data-grid": "^5.14.0",
     "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "use-clipboard-copy": "^0.1.2"
   },
   "devDependencies": {
