--- a/applications/areg-portal/frontend/package.json
+++ b/applications/areg-portal/frontend/package.json
@@ -24,6 +24,7 @@
     "@mui/x-data-grid": "^5.14.0",
     "axios": "^0.21.1",
     "react": "^17.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
