--- a/applications/areg-portal/frontend/package.json
+++ b/applications/areg-portal/frontend/package.json
@@ -23,6 +23,7 @@
     "@mui/styles": "^5.9.3",
     "@mui/x-data-grid": "^5.14.0",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "react": "^17.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.0",
