#29 update model, implement mappers

--- a/applications/areg-portal/deploy/values.yaml
+++ b/applications/areg-portal/deploy/values.yaml
@@ -19,6 +19,8 @@ harness:
     - common
     - events
     - accounts
+    soft:
+    - pgadmin
   use_services:
   - name: common
   uri_role_mapping:
