--- a/applications/areg-portal/frontend/package.json
+++ b/applications/areg-portal/frontend/package.json
@@ -10,7 +10,7 @@
     "build-dev": "webpack --config webpack.config.js --env mode=development",
     "prestart": "eslint . --color --fix",
     "start": "webpack serve --progress  --env DOMAIN=http://localhost:5000 --config webpack.config.dev.js",
-    "start:dev": "webpack serve --progress  --env.DOMAIN=https://areg.dev.metacell.us --config webpack.config.dev.js",
+    "start:dev": "webpack serve --progress  --env DOMAIN=https://areg.dev.metacell.us --config webpack.config.dev.js",
     "start:minikube": "webpack serve --progress --env DOMAIN=http://www.areg.local --config webpack.config.dev.js"
   },
   "author": "",
@@ -38,7 +38,6 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -46,24 +45,26 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^5.2.4",
+    "dotenv": "^16.0.2",
     "eslint": "5.16.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "less-loader": "^6.1.2",
     "less-vars-to-js": "^1.3.0",
     "raw-loader": "^4.0.2",
     "style-loader": "^1.1.3",
-    "typescript": "^3.9.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.0.0"
+    "ts-loader": "^9.0.0",
+    "typescript": "^4.8.3",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-merge": "^5.7.0"
   }
 }
