--- a/applications/areg-portal/frontend/package.json
+++ b/applications/areg-portal/frontend/package.json
@@ -11,16 +11,16 @@
     "prestart": "eslint . --color --fix",
     "start": "webpack serve --progress  --env DOMAIN=http://localhost:5000 --config webpack.config.dev.js",
     "start:dev": "webpack serve --progress  --env DOMAIN=https://areg.dev.metacell.us --config webpack.config.dev.js",
-    "start:minikube": "webpack serve --progress --env DOMAIN=http://www.areg.local --config webpack.config.dev.js"
+    "start:local": "webpack serve --progress --env DOMAIN=http://areg.local --config webpack.config.dev.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.1",
-    "@mui/styles": "^5.10.3",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
+    "@mui/styles": "^5.10.6",
     "@mui/x-data-grid": "^5.14.0",
     "axios": "^0.21.4",
     "keycloak-js": "^19.0.1",
