--- a/deployment/codefresh-dev.yaml
+++ b/deployment/codefresh-dev.yaml
@@ -33,8 +33,8 @@ steps:
     working_directory: .
     commands:
     - bash cloud-harness/install.sh
-    - harness-deployment cloud-harness . .overrides -t ${{CF_BUILD_ID}} -d ${{DOMAIN}}
-      -r ${{REGISTRY}} -rs ${{REGISTRY_SECRET}} -n ${{NAMESPACE}} -e dev -i areg-portal
+    - harness-deployment cloud-harness . -t ${{CF_BUILD_ID}} -d ${{DOMAIN}} -r ${{REGISTRY}}
+      -rs ${{REGISTRY_SECRET}} -n ${{NAMESPACE}} -e dev -i areg-portal
   prepare_deployment_view:
     commands:
     - helm template ./deployment/helm --debug -n ${{NAMESPACE}}
@@ -49,21 +49,6 @@ steps:
     type: parallel
     stage: build
     steps:
-      cloudharness-base-debian:
-        type: build
-        stage: build
-        tag: '${{CF_BUILD_ID}}'
-        dockerfile: infrastructure/base-images/cloudharness-base-debian/Dockerfile
-        registry: '${{CODEFRESH_REGISTRY}}'
-        buildkit: true
-        build_arguments:
-        - TAG=${{CF_BUILD_ID}}
-        - DOMAIN=${{DOMAIN}}
-        - NOCACHE=${{CF_BUILD_ID}}
-        - REGISTRY=${{REGISTRY}}/areg/
-        image_name: areg/cloudharness-base-debian
-        title: Cloudharness base debian
-        working_directory: ./cloud-harness
       cloudharness-base:
         type: build
         stage: build
@@ -94,16 +79,11 @@ steps:
         image_name: areg/cloudharness-frontend-build
         title: Cloudharness frontend build
         working_directory: ./cloud-harness
-  build_static_images:
-    title: Build static images
-    type: parallel
-    stage: build
-    steps:
-      cloudharness-django:
+      cloudharness-base-debian:
         type: build
         stage: build
         tag: '${{CF_BUILD_ID}}'
-        dockerfile: Dockerfile
+        dockerfile: infrastructure/base-images/cloudharness-base-debian/Dockerfile
         registry: '${{CODEFRESH_REGISTRY}}'
         buildkit: true
         build_arguments:
@@ -111,10 +91,14 @@ steps:
         - DOMAIN=${{DOMAIN}}
         - NOCACHE=${{CF_BUILD_ID}}
         - REGISTRY=${{REGISTRY}}/areg/
-        - CLOUDHARNESS_BASE_DEBIAN=${{REGISTRY}}/areg/cloudharness-base-debian:${{CF_BUILD_ID}}
-        image_name: areg/cloudharness-django
-        title: Cloudharness django
-        working_directory: ./cloud-harness/infrastructure/common-images/cloudharness-django
+        image_name: areg/cloudharness-base-debian
+        title: Cloudharness base debian
+        working_directory: ./cloud-harness
+  build_static_images:
+    title: Build static images
+    type: parallel
+    stage: build
+    steps:
       cloudharness-flask:
         type: build
         stage: build
@@ -131,10 +115,41 @@ steps:
         image_name: areg/cloudharness-flask
         title: Cloudharness flask
         working_directory: ./cloud-harness/infrastructure/common-images/cloudharness-flask
+      cloudharness-django:
+        type: build
+        stage: build
+        tag: '${{CF_BUILD_ID}}'
+        dockerfile: Dockerfile
+        registry: '${{CODEFRESH_REGISTRY}}'
+        buildkit: true
+        build_arguments:
+        - TAG=${{CF_BUILD_ID}}
+        - DOMAIN=${{DOMAIN}}
+        - NOCACHE=${{CF_BUILD_ID}}
+        - REGISTRY=${{REGISTRY}}/areg/
+        - CLOUDHARNESS_BASE_DEBIAN=${{REGISTRY}}/areg/cloudharness-base-debian:${{CF_BUILD_ID}}
+        image_name: areg/cloudharness-django
+        title: Cloudharness django
+        working_directory: ./cloud-harness/infrastructure/common-images/cloudharness-django
   build_application_images:
     type: parallel
     stage: build
     steps:
+      accounts:
+        type: build
+        stage: build
+        tag: '${{CF_BUILD_ID}}'
+        dockerfile: Dockerfile
+        registry: '${{CODEFRESH_REGISTRY}}'
+        buildkit: true
+        build_arguments:
+        - TAG=${{CF_BUILD_ID}}
+        - DOMAIN=${{DOMAIN}}
+        - NOCACHE=${{CF_BUILD_ID}}
+        - REGISTRY=${{REGISTRY}}/areg/
+        image_name: areg/accounts
+        title: Accounts
+        working_directory: ./.overrides/applications/accounts
       common:
         type: build
         stage: build
@@ -151,21 +166,6 @@ steps:
         image_name: areg/common
         title: Common
         working_directory: ./cloud-harness/applications/common/server
-      accounts:
-        type: build
-        stage: build
-        tag: '${{CF_BUILD_ID}}'
-        dockerfile: Dockerfile
-        registry: '${{CODEFRESH_REGISTRY}}'
-        buildkit: true
-        build_arguments:
-        - TAG=${{CF_BUILD_ID}}
-        - DOMAIN=${{DOMAIN}}
-        - NOCACHE=${{CF_BUILD_ID}}
-        - REGISTRY=${{REGISTRY}}/areg/
-        image_name: areg/accounts
-        title: Accounts
-        working_directory: ./.overrides/applications/accounts
       events:
         type: build
         stage: build
@@ -226,14 +226,6 @@ steps:
     type: parallel
     stage: publish
     steps:
-      publish_cloudharness-base-debian:
-        stage: publish
-        type: push
-        title: Cloudharness base debian
-        candidate: '${{REGISTRY}}/areg/cloudharness-base-debian:${{CF_BUILD_ID}}'
-        tags:
-        - '${{DEPLOYMENT_PUBLISH_TAG}}'
-        registry: '${{REGISTRY_PUBLISH_URL}}'
       publish_cloudharness-base:
         stage: publish
         type: push
@@ -250,11 +242,11 @@ steps:
         tags:
         - '${{DEPLOYMENT_PUBLISH_TAG}}'
         registry: '${{REGISTRY_PUBLISH_URL}}'
-      publish_cloudharness-django:
+      publish_cloudharness-base-debian:
         stage: publish
         type: push
-        title: Cloudharness django
-        candidate: '${{REGISTRY}}/areg/cloudharness-django:${{CF_BUILD_ID}}'
+        title: Cloudharness base debian
+        candidate: '${{REGISTRY}}/areg/cloudharness-base-debian:${{CF_BUILD_ID}}'
         tags:
         - '${{DEPLOYMENT_PUBLISH_TAG}}'
         registry: '${{REGISTRY_PUBLISH_URL}}'
@@ -266,11 +258,11 @@ steps:
         tags:
         - '${{DEPLOYMENT_PUBLISH_TAG}}'
         registry: '${{REGISTRY_PUBLISH_URL}}'
-      publish_common:
+      publish_cloudharness-django:
         stage: publish
         type: push
-        title: Common
-        candidate: '${{REGISTRY}}/areg/common:${{CF_BUILD_ID}}'
+        title: Cloudharness django
+        candidate: '${{REGISTRY}}/areg/cloudharness-django:${{CF_BUILD_ID}}'
         tags:
         - '${{DEPLOYMENT_PUBLISH_TAG}}'
         registry: '${{REGISTRY_PUBLISH_URL}}'
@@ -279,6 +271,14 @@ steps:
         type: push
         title: Accounts
         candidate: '${{REGISTRY}}/areg/accounts:${{CF_BUILD_ID}}'
+        tags:
+        - '${{DEPLOYMENT_PUBLISH_TAG}}'
+        registry: '${{REGISTRY_PUBLISH_URL}}'
+      publish_common:
+        stage: publish
+        type: push
+        title: Common
+        candidate: '${{REGISTRY}}/areg/common:${{CF_BUILD_ID}}'
         tags:
         - '${{DEPLOYMENT_PUBLISH_TAG}}'
         registry: '${{REGISTRY_PUBLISH_URL}}'
