--- a/applications/portal/deploy/values.yaml
+++ b/applications/portal/deploy/values.yaml
@@ -28,12 +28,19 @@ harness:
   - uri: /admin/*
     roles:
     - administrator
-    - portal:administrator
-    - portal:manager
     require-any-role: true
   - uri: /add
     roles: []
     require-any-role: true
+  - uri: /test1
+    roles: []
+    require-any-role: false
+  - uri: /test2
+  - uri: /test3
+    roles:
+    - offline_access
+    require-any-role: false
+
   - uri: /login
     roles: []
     require-any-role: true
