--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -23,8 +23,9 @@
     "@mui/styles": "^5.10.6",
     "@mui/x-data-grid": "^5.14.0",
     "axios": "^0.21.4",
-    "keycloak-js": "^19.0.1",
     "formik": "^2.2.9",
+    "keycloak-js": "^19.0.1",
+    "pluralize": "^8.0.0",
     "react": "^17.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.0",
