--- a/applications/portal/deploy/values.yaml
+++ b/applications/portal/deploy/values.yaml
@@ -15,15 +15,19 @@ harness:
     build:
       - cloudharness-frontend-build
       - cloudharness-django
+
     hard:
       - common
       - events
       - accounts
       - argo
+
     soft:
       - pgadmin
+      - accounts-api
   use_services:
     - name: common
+    - name: accounts_api
   uri_role_mapping:
     - uri: /admin/*
       roles:
