--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -11,7 +11,7 @@
     "prestart": "eslint . --color --fix",
     "start": "webpack serve --progress  --env DOMAIN=http://localhost:8000 --config webpack.config.dev.js",
     "start:dev": "webpack serve --progress  --env DOMAIN=https://areg.dev.metacell.us --config webpack.config.dev.js",
-    "start:local": "webpack serve --progress --env DOMAIN=http://areg.local --config webpack.config.dev.js"
+    "start:local": "webpack serve --progress --env DOMAIN=http://areg  --env ACCOUNTS_API_DOMAIN=http://api.accounts.areg  --config webpack.config.dev.js"
   },
   "author": "",
   "license": "ISC",
