--- a/applications/portal/Dockerfile
+++ b/applications/portal/Dockerfile
@@ -17,15 +17,13 @@ RUN npm run build
 
 FROM $CLOUDHARNESS_DJANGO
 
-
-
 WORKDIR ${APP_DIR}
 RUN mkdir -p ${APP_DIR}/static/www
 
 COPY backend/requirements.txt ${APP_DIR}
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN --mount=type=cache,target=/root/.cache python -m pip install --upgrade pip && pip install -r requirements.txt --prefer-binary
 
-COPY backend/requirements.txt backend/setup.py ${APP_DIR}
+COPY backend/setup.py ${APP_DIR}
 RUN python3 -m pip install -e .
 
 COPY backend ${APP_DIR}
